<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <hust.xujifa.uilib.view.BottomSheet
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomsheet_height"
        app:background_color="@color/colorPrimary"
        app:text_color="@android:color/white"

        app:text1="@string/bottomsheet_text1"
        app:text2="@string/bottomsheet_text2"
        app:text3="@string/bottomsheet_text3"
        android:layout_alignParentBottom="true"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_sheet"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_search"
        android:layout_alignParentEnd="true"
        android:onClick="search"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/fab_padding"
        android:layout_marginBottom="@dimen/fab_search_bottom"
        android:src="@android:drawable/ic_search_category_default"
        android:layout_above="@+id/bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
