...
    </TableRow>
    <TableRow
        android:weightSum="3"
        >

         <TextView    android:onClick="showlist"   android:clickable="true" 
            android:id="@+id/class1"
            android:textSize="@dimen/text_mid"
            android:layout_width="0dp"

            android:gravity="center"
            android:layout_height="60dp"
            android:text="@string/classfication1"
...
